# Ctrans

./: .gitignore  CMakeLists.txt  Youdao.py  build.bat  cp.bat  iciba.txt  main.cpp  picosha2.h  test.json  youdao.json
.cache/clangd/index/: httplib.h.D732113BA05644EE.idx  main.cpp.C7B6E57DA63B17B7.idx  picosha2.h.686EE5AF4BAFA164.idx
utf8console/: CMakeLists.txt
utf8console/src/: utf8_cin_windows.cpp
